check_output_5.txt
    Checking aether-core v0.1.0 (/home/andrii/Projects/AetherDebugger/aether-core)
warning: unused import: `std::sync::Arc`
  --> aether-core/src/session.rs:15:5
   |
15 | use std::sync::Arc;
   |     ^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused imports: `Dwarf`, `EndianSlice`, `SectionId`, and `Unit`
 --> aether-core/src/symbols/mod.rs:6:13
  |
6 | ...::{Dwarf, EndianSlice, RunTimeEndian, SectionId, AttributeValue, Unit};
  |       ^^^^^  ^^^^^^^^^^^                 ^^^^^^^^^                  ^^^^

warning: unused import: `Core`
 --> aether-core/src/trace.rs:1:25
  |
1 | use probe_rs::{Session, Core};
  |                         ^^^^

error[E0283]: type annotations needed
   --> aether-core/src/session.rs:283:81
    |
283 | ...re.write_core_reg(id.into(), val.into());
    |       --------------                ^^^^
    |       |
    |       required by a bound introduced by this call
    |
    = note: cannot satisfy `_: Into<...>`
note: required by a bound in `probe_rs::Core::<'probe>::write_core_reg`
   --> /home/andrii/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/probe-rs-0.31.0/src/core.rs:353:12
    |
347 |     pub fn write_core_reg<T>(
    |            -------------- required by a bound in this associated function
...
353 |         T: Into<RegisterValue>,
    |            ^^^^^^^^^^^^^^^^^^^ required by this bound in `Core::<'probe>::write_core_reg`
    = note: the full name for the type has been written to '/home/andrii/Projects/AetherDebugger/target/debug/deps/aether_core-14dc7a82b24b6325.long-type-6213455589366012972.txt'
    = note: consider using `--verbose` to print the full type name to the console
help: try using a fully qualified path to specify the expected types
    |
283 -                                      let _ = core.write_core_reg(id.into(), val.into());
283 +                                      let _ = core.write_core_reg(id.into(), <u64 as Into<T>>::into(val));
    |
help: consider removing this method call, as the receiver has type `u64` and `u64: Into<probe_rs::RegisterValue>` trivially holds
    |
283 -                                      let _ = core.write_core_reg(id.into(), val.into());
283 +                                      let _ = core.write_core_reg(id.into(), val);
    |

warning: variable does not need to be mutable
  --> aether-core/src/stack.rs:86:9
   |
86 |     let mut current_lr = lr_val;
   |         ----^^^^^^^^^^
   |         |
   |         help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `session`
  --> aether-core/src/trace.rs:25:30
   |
25 | ... self, session: &mut Sessio...
   |           ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_session`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `session`
  --> aether-core/src/trace.rs:41:33
   |
41 | ... self, session: &mut Sessio...
   |           ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_session`

For more information about this error, try `rustc --explain E0283`.
warning: `aether-core` (lib) generated 6 warnings
error: could not compile `aether-core` (lib) due to 1 previous error; 6 warnings emitted
